// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player module iterates all players 1`] = `
Array [
  Array [
    "player1",
    Object {
      "dead": false,
      "id": "player1",
      "name": "Player",
    },
  ],
  Array [
    "player2",
    Object {
      "dead": false,
      "id": "player2",
      "name": "Player2",
    },
  ],
]
`;

exports[`Player module remembers added player 1`] = `
Object {
  "dead": false,
  "id": "player1",
  "name": "Player",
}
`;
